--- a/public/main/css/megatron-template.css
+++ b/public/main/css/megatron-template.css
@@ -3501,7 +3501,7 @@ _:valid\0, .contacts-form input.form-control, .contacts-form textarea.form-contr
 }
 .blog-widget {
 	color: #d9d9d9;
-	background: url(../images/blog-back.jpg) no-repeat 50% 0 #262626;
+	background:  url(../../images/blog-back.jpg) no-repeat 50% 0 #262626;
 	-webkit-backface-visibility: visible;
 	overflow: hidden;
 	padding: 30px 0;
@@ -3834,7 +3834,6 @@ _:valid\0, .contacts-form input.form-control, .contacts-form textarea.form-contr
 	text-decoration: none
 }
 .footer-navbar {
-	background: url(../images/logo-back-white.png) no-repeat 50% 50%;
 	border-top: 1px solid #eee;
 	border-bottom: 1px solid #eee
 }
@@ -3856,7 +3855,7 @@ _:valid\0, .contacts-form input.form-control, .contacts-form textarea.form-contr
 	padding-bottom: 20px;
 }
 .footer-navbar.dark {
-	background: url(../images/logo-back.png) no-repeat 50% 50% #272727;
+	background-color: #272727;
 	color: #d9d9d9
 }
 .footer-navbar.dark h3 {
